objects/Objects_Delete__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>DateTime_Check_Field__c</fullName>
        <label>DateTime Check Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_Oggetto__c</fullName>
        <label>Nome Oggetto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Delete_Records_Before__c</fullName>
        <label>Delete Records Before</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Record_Limit__c</fullName>
        <label>Record Limit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Objects Delete</label>
</CustomObject>